fix(styles): :lipstick: fix not-allowed cursor not showing up when button is disabled

--- a/src/styles/blocks/_button.scss
+++ b/src/styles/blocks/_button.scss
@@ -35,6 +35,10 @@
     }
   }
 
+  &[type='submit'] {
+    cursor: pointer;
+  }
+
   &[disabled] {
     cursor: not-allowed;
     filter: grayscale(50%);
